--- a/index.html
+++ b/index.html
@@ -14,22 +14,66 @@
 
     <div id="start" class="non-scene">
 
-        <h1>PORTOFOLIO</h1>
+        <h1>PEPIJN'S <br> PORTOFOLIO</h1>
 
-        <button class="top-left" id="button0">PEPIJN KREIJNS</button>
-        <button class="top-right" id="button1">PORTOFOLIO</button>
-        <button class="below-left" id="button2">CONTACT</button>
-        <button class="below-right" id="button3">ABOUT ME</button>
+        <button class="top-left" id="button0">OVER MIJ</button>
+        <button class="top-right" id="button1">GRAFISCH DESIGN</button>
+        <button class="below-left" id="button2">TESTIMONIALS</button>
+        <button class="below-right" id="button3">FOTOGRAFIE</button>
 
     </div>
 
     <div id="scene0" class="scene">
-        <h2 class="kopje">PEPIJN KREIJNS</h2>
+        <h2 class="kopje">OVER MIJ</h2>
         <button class="home">^</button>
+        <div id="PEP-LINKS"> <img src="img/pasfoto.JPG" alt="pasfoto"></div>
+        <div id="PEP-RECHTS">
+            <h4>Over mij</h4>
+            <p>Mijn naam is Pepijn en momenteel ben ik bezig met het tweede jaar van mijn opleiding Communicatie en Multimedia Design. Daarnaast ben ik een gepassioneerde freelance designer. Ik vind het geweldig om creatief bezig te zijn en heb een sterke
+                interesse in design en fotografie. Als freelancer heb ik al ervaring opgedaan in het werkveld. Ik vind het altijd een uitdaging om mijn creativiteit te gebruiken om de ideeën van mijn klanten tot leven te brengen. </p>
 
-        <img src="img/pasfoto.JPG" alt="pasfoto">
-        <h4>HEE,</h4>
-        <p>Allemaal onzin...</p>
+            <h4>Profiel</h4>
+            <ul>
+                <li>Naam: Pepijn Kreijns</li>
+                <li>Geboortedatum: 28 november 2003</li>
+                <li>Woonplaats: Heerlen, Limburg</li>
+                <li>Spreektaal: Nederlands (moedertaal) & Engels</li>
+            </ul>
+            <h4>School</h4>
+            <ul>
+                <li>2021 - heden: HBO Communicatie and Multimedia Design</li>
+                <li>2016 - 2021: HAVO Grotius College Heerlen</li>
+            </ul>
+        </div>
+        <div id="PEP-RECHTS">
+            <h4>Skills</h4>
+            <ul>
+                <li>Adobe XD</li>
+                <li>Adobe Ilustrator</li>
+                <li>Adobe InDesign</li>
+            </ul>
+
+
+            <h4>Werkervaring</h4>
+            <ul>
+                <li>Feb 2021 - heden: Eigenaar Pep Grafisch Design</li>
+                <li>Nov 2021 - Jan 2023: Floormanager Jan Linders BV</li>
+                <li>Feb 2019 - Nov 2021: Verkoopmedewerker Jan Linders BV</li>
+            </ul>
+            <h4>Contact (Privé)</h4>
+            <ul>
+                <li>Tel: +31645455455</li>
+                <li>Email: p.kreijns@ziggo.nl</li>
+                <li>LinkedIn:
+                    <a href="https://www.linkedin.com/in/pepijn-kreijns-b40a65222/">Pepijn Kreijns</a></li>
+            </ul>
+            <h4>Contact (Zakelijk)</h4>
+            <ul>
+                <li>Tel: +31615620964</li>
+                <li>Email: info@pepgrafischdesign.nl</li>
+            </ul>
+        </div>
+
 
     </div>
 
