--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
     <div id="scene0" class="scene">
         <h2 class="kopje">OVER MIJ</h2>
         <button class="home">^</button>
-        <div id="PEP-LINKS"> <img src="img/pasfoto.JPG" alt="pasfoto"></div>
-        <div id="PEP-RECHTS">
+
+        <div id="PEP-LINKS">
             <h4>Over mij</h4>
-            <p>Mijn naam is Pepijn en momenteel ben ik bezig met het tweede jaar van mijn opleiding Communicatie en Multimedia Design. Daarnaast ben ik een gepassioneerde freelance designer. Ik vind het geweldig om creatief bezig te zijn en heb een sterke
-                interesse in design en fotografie. Als freelancer heb ik al ervaring opgedaan in het werkveld. Ik vind het altijd een uitdaging om mijn creativiteit te gebruiken om de ideeën van mijn klanten tot leven te brengen. </p>
+            <h6>Mijn naam is Pepijn en momenteel ben ik bezig met het tweede jaar van mijn opleiding Communicatie en Multimedia Design. Daarnaast ben ik een gepassioneerde freelance designer. Ik vind het geweldig om creatief bezig te zijn en heb een sterke
+                interesse in design en fotografie. Als freelancer heb ik al ervaring opgedaan in het werkveld. Ik vind het altijd een uitdaging om mijn creativiteit te gebruiken om de ideeën van mijn klanten tot leven te brengen.
+            </h6>
 
             <h4>Profiel</h4>
             <ul>
@@ -74,8 +75,8 @@
             </ul>
         </div>
 
-
     </div>
+
 
     <div id="scene1" class="scene">
         <h2 class="kopje">PORTOFOLIO</h2>
