--- a/index.html
+++ b/index.html
@@ -27,52 +27,55 @@
         <h2 class="kopje">OVER MIJ</h2>
         <button class="home">^</button>
 
-        <div id="PEP-LINKS">
-            <h4>Over mij</h4>
-            <h6>Mijn naam is Pepijn en momenteel ben ik bezig met het tweede jaar van mijn opleiding Communicatie en Multimedia Design. Daarnaast ben ik een gepassioneerde freelance designer. Ik vind het geweldig om creatief bezig te zijn en heb een sterke
-                interesse in design en fotografie. Als freelancer heb ik al ervaring opgedaan in het werkveld. Ik vind het altijd een uitdaging om mijn creativiteit te gebruiken om de ideeën van mijn klanten tot leven te brengen.
-            </h6>
+        <div id="containertje">
 
-            <h4>Profiel</h4>
-            <ul>
-                <li>Naam: Pepijn Kreijns</li>
-                <li>Geboortedatum: 28 november 2003</li>
-                <li>Woonplaats: Heerlen, Limburg</li>
-                <li>Spreektaal: Nederlands (moedertaal) & Engels</li>
-            </ul>
-            <h4>School</h4>
-            <ul>
-                <li>2021 - heden: HBO Communicatie and Multimedia Design</li>
-                <li>2016 - 2021: HAVO Grotius College Heerlen</li>
-            </ul>
-        </div>
-        <div id="PEP-RECHTS">
-            <h4>Skills</h4>
-            <ul>
-                <li>Adobe XD</li>
-                <li>Adobe Ilustrator</li>
-                <li>Adobe InDesign</li>
-            </ul>
+            <div id="PEP-LINKS">
+                <h4>Wie ben ik?</h4>
+                <h6>Mijn naam is Pepijn en momenteel ben ik bezig met het tweede jaar van mijn opleiding Communicatie en Multimedia Design. Daarnaast ben ik een gepassioneerde freelance designer. Ik vind het geweldig om creatief bezig te zijn en heb een sterke
+                    interesse in design en fotografie. Als freelancer heb ik al ervaring opgedaan in het werkveld. Ik vind het altijd een uitdaging om mijn creativiteit te gebruiken om de ideeën van mijn klanten tot leven te brengen.
+                </h6>
+
+                <h4>Profiel</h4>
+                <ul>
+                    <li>Naam: Pepijn Kreijns</li>
+                    <li>Geboortedatum: 28 november 2003</li>
+                    <li>Woonplaats: Heerlen, Limburg</li>
+                    <li>Spreektaal: Nederlands (moedertaal) & Engels</li>
+                </ul>
+                <h4>School</h4>
+                <ul>
+                    <li>2021 - heden: HBO Communicatie and Multimedia Design</li>
+                    <li>2016 - 2021: HAVO Grotius College Heerlen</li>
+                </ul>
+            </div>
+            <div id="PEP-RECHTS">
+                <h4>Skills</h4>
+                <ul>
+                    <li>Adobe XD</li>
+                    <li>Adobe Ilustrator</li>
+                    <li>Adobe InDesign</li>
+                </ul>
 
 
-            <h4>Werkervaring</h4>
-            <ul>
-                <li>Feb 2021 - heden: Eigenaar Pep Grafisch Design</li>
-                <li>Nov 2021 - Jan 2023: Floormanager Jan Linders BV</li>
-                <li>Feb 2019 - Nov 2021: Verkoopmedewerker Jan Linders BV</li>
-            </ul>
-            <h4>Contact (Privé)</h4>
-            <ul>
-                <li>Tel: +31645455455</li>
-                <li>Email: p.kreijns@ziggo.nl</li>
-                <li>LinkedIn:
-                    <a href="https://www.linkedin.com/in/pepijn-kreijns-b40a65222/">Pepijn Kreijns</a></li>
-            </ul>
-            <h4>Contact (Zakelijk)</h4>
-            <ul>
-                <li>Tel: +31615620964</li>
-                <li>Email: info@pepgrafischdesign.nl</li>
-            </ul>
+                <h4>Werkervaring</h4>
+                <ul>
+                    <li>Feb 2021 - heden: Eigenaar Pep Grafisch Design</li>
+                    <li>Nov 2021 - Jan 2023: Floormanager Jan Linders BV</li>
+                    <li>Feb 2019 - Nov 2021: Verkoopmedewerker Jan Linders BV</li>
+                </ul>
+                <h4>Contact (Privé)</h4>
+                <ul>
+                    <li>Tel: +31645455455</li>
+                    <li>Email: p.kreijns@ziggo.nl</li>
+                    <li>LinkedIn:
+                        <a href="https://www.linkedin.com/in/pepijn-kreijns-b40a65222/">Pepijn Kreijns</a></li>
+                </ul>
+                <h4>Contact (Zakelijk)</h4>
+                <ul>
+                    <li>Tel: +31615620964</li>
+                    <li>Email: info@pepgrafischdesign.nl</li>
+                </ul>
+            </div>
         </div>
 
     </div>
