--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <button class="top-left" id="button0">OVER MIJ</button>
         <button class="top-right" id="button1">GRAFISCH DESIGN</button>
-        <button class="below-left" id="button2">TESTIMONIALS</button>
-        <button class="below-right" id="button3">FOTOGRAFIE</button>
+        <button class="below-left" id="button2">FOTOGRAFIE</button>
+        <button class="below-right" id="button3">TESTIMONIALS</button>
 
     </div>
 
@@ -109,13 +109,13 @@
     </div>
 
     <div id="scene2" class="scene">
-        <h2 class="kopje">CONTACT</h2>
+        <h2 class="kopje">FOTOGRAFIE</h2>
         <button class="home">^</button>
 
     </div>
 
     <div id="scene3" class="scene">
-        <h2 class="kopje">ABOUT ME</h2>
+        <h2 class="kopje">TESTIMONIALS</h2>
         <button class="home">^</button>
 
     </div>
