--- a/project01.html
+++ b/project01.html
@@ -21,9 +21,16 @@
 
     <div class="container-mid">
         <h3>01 JA TEGEN NU BV</h3>
-        <p>Wij hebben ons de afgelopen 20 jaar gespecialiseerd in het doorbreken van patronen op het gebied van Mens & Organisatie. De huidige tijd is er een van grote complexiteit; zowel op collectief als op individueel niveau. Meer dan ooit wordt een beroep
-            gedaan op onze veranderingsbereidheid. De wereld om ons heen verandert in een steeds sneller tempo en dit appelleert sterk aan ons leervermogen en de ontwikkeling van ons potentieel. In het dagelijks leven én op de werkvloer. Dit vraagt een
-            aanpak die dieper kijkt, met name in de onderstroom. Oplossingen die vroeger werkte zijn nu vaak niet meer behulpzaam en de huidige vraagstukken vragen om meer dan alleen oplossingsgericht werken.</p>
+        <p>In 2022 heb ik de opdracht gekregen om voor Ja tegen Nu en haar eigen Academie een nieuw logo te ontwerpen. Ja tegen Nu wilde graag een profesionelere uitstraling hebben. In het logo moest beweging komen, en het woordt 'Ja' moest centraal staan.
+            Na deze opdracht heb ik nog een aantal verschillende grafische uitingen voor Ja tegen Nu gemaakt.
+
+        </p>
+
+        <div id="JTN1" class="big-logo"></div>
+        <div id="JTN2" class="big-logo"></div>
+        <div id="JTN3" class="big-logo"></div>
+        <div id="JTN4" class="big-logo"></div>
+
     </div>
 
 
