--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <body>
 
     <div id="start" class="non-scene">
+        <div class="big-foto"></div>
+        <div class="big-text"></div>
 
         <h1>PEPIJN'S <br> PORTOFOLIO</h1>
 
         <button class="top-left" id="button0">OVER MIJ</button>
-        <button class="top-right" id="button1">GRAFISCH DESIGN</button>
-        <button class="below-left" id="button2">FOTOGRAFIE</button>
-        <button class="below-right" id="button3">TESTIMONIALS</button>
+        <button class="top-right" id="button1">PORTOFOLIO</button>
+        <!-- <button class="below-left" id="button2">FOTOGRAFIE</button>
+        <button class="below-right" id="button3">TESTIMONIALS</button> -->
 
     </div>
 
@@ -28,6 +30,8 @@
         <button class="home">^</button>
 
         <div id="containertje">
+
+
 
             <div id="PEP-LINKS">
                 <h4>Wie ben ik?</h4>
@@ -60,8 +64,10 @@
                 <h4>Werkervaring</h4>
                 <ul>
                     <li>Feb 2021 - heden: Eigenaar Pep Grafisch Design</li>
-                    <li>Nov 2021 - Jan 2023: Floormanager Jan Linders BV</li>
-                    <li>Feb 2019 - Nov 2021: Verkoopmedewerker Jan Linders BV</li>
+                    <li><br></li>
+                    <li>April 2023 - heden: Floormanager Jan Linders BV</li>
+                    <li>Nov 2021 - jan 2023: Floormanager Jan Linders BV</li>
+                    <li>Feb 2019 - nov 2021: Verkoopmedewerker Jan Linders BV</li>
                 </ul>
                 <h4>Contact (Privé)</h4>
                 <ul>
@@ -70,11 +76,7 @@
                     <li>LinkedIn:
                         <a href="https://www.linkedin.com/in/pepijn-kreijns-b40a65222/">Pepijn Kreijns</a></li>
                 </ul>
-                <h4>Contact (Zakelijk)</h4>
-                <ul>
-                    <li>Tel: +31615620964</li>
-                    <li>Email: info@pepgrafischdesign.nl</li>
-                </ul>
+
             </div>
         </div>
 
@@ -86,10 +88,10 @@
         <button class="home">^</button>
 
         <div class="wrapper">
-            <a href="project02.html">
+            <a href="project01.html">
                 <div id="holder1" class="placeholder"></div>
             </a>
-            <a href="project01.html">
+            <a href="project02.html">
                 <div id="holder2" class="placeholder"></div>
             </a>
             <a href="project03.html">
