--- a/index.html
+++ b/index.html
@@ -12,117 +12,84 @@
 
 <body>
 
-    <div id="start" class="non-scene">
-        <div class="big-foto"></div>
-        <div class="big-text"></div>
+    <div class="overflow-body">
 
-        <h1>PEPIJN'S <br> PORTOFOLIO</h1>
+        <div id="start" class="non-scene">
+            <div class="big-foto"></div>
+            <div class="big-text"></div>
 
-        <button class="top-left" id="button0">OVER MIJ</button>
-        <button class="top-right" id="button1">PORTOFOLIO</button>
-        <!-- <button class="below-left" id="button2">FOTOGRAFIE</button>
-        <button class="below-right" id="button3">TESTIMONIALS</button> -->
+            <!-- <h1>PEPIJN'S <br> PORTOFOLIO</h1> -->
 
-    </div>
+            <button class="top-left" id="button0">OVER MIJ</button>
+            <button class="top-right" id="button1">PORTOFOLIO</button>
+            <button class="below-left" id="button2">FOTOGRAFIE</button>
+            <button class="below-right" id="button3">TESTIMONIALS</button>
 
-    <div id="scene0" class="scene">
-        <h2 class="kopje">OVER MIJ</h2>
-        <button class="home">^</button>
-
-        <div id="containertje">
-
-
-
-            <div id="PEP-LINKS">
-                <h4>Wie ben ik?</h4>
-                <h6>Mijn naam is Pepijn en momenteel ben ik bezig met het tweede jaar van mijn opleiding Communicatie en Multimedia Design. Daarnaast ben ik een gepassioneerde freelance designer. Ik vind het geweldig om creatief bezig te zijn en heb een sterke
-                    interesse in design en fotografie. Als freelancer heb ik al ervaring opgedaan in het werkveld. Ik vind het altijd een uitdaging om mijn creativiteit te gebruiken om de ideeën van mijn klanten tot leven te brengen.
-                </h6>
-
-                <h4>Profiel</h4>
-                <ul>
-                    <li>Naam: Pepijn Kreijns</li>
-                    <li>Geboortedatum: 28 november 2003</li>
-                    <li>Woonplaats: Heerlen, Limburg</li>
-                    <li>Spreektaal: Nederlands (moedertaal) & Engels</li>
-                </ul>
-                <h4>School</h4>
-                <ul>
-                    <li>2021 - heden: HBO Communicatie and Multimedia Design</li>
-                    <li>2016 - 2021: HAVO Grotius College Heerlen</li>
-                </ul>
-            </div>
-            <div id="PEP-RECHTS">
-                <h4>Skills</h4>
-                <ul>
-                    <li>Adobe XD</li>
-                    <li>Adobe Ilustrator</li>
-                    <li>Adobe InDesign</li>
-                </ul>
-
-
-                <h4>Werkervaring</h4>
-                <ul>
-                    <li>Feb 2021 - heden: Eigenaar Pep Grafisch Design</li>
-                    <li><br></li>
-                    <li>April 2023 - heden: Floormanager Jan Linders BV</li>
-                    <li>Nov 2021 - jan 2023: Floormanager Jan Linders BV</li>
-                    <li>Feb 2019 - nov 2021: Verkoopmedewerker Jan Linders BV</li>
-                </ul>
-                <h4>Contact (Privé)</h4>
-                <ul>
-                    <li>Tel: +31645455455</li>
-                    <li>Email: p.kreijns@ziggo.nl</li>
-                    <li>LinkedIn:
-                        <a href="https://www.linkedin.com/in/pepijn-kreijns-b40a65222/">Pepijn Kreijns</a></li>
-                </ul>
-
-            </div>
         </div>
 
-    </div>
+        <div id="scene0" class="scene">
+            <h2 class="kopje">OVER MIJ</h2>
+            <button class="home">^</button>
 
-
-    <div id="scene1" class="scene">
-        <h2 class="kopje">PORTOFOLIO</h2>
-        <button class="home">^</button>
-
-        <div class="wrapper">
-            <a href="project01.html">
-                <div id="holder1" class="placeholder"></div>
-            </a>
-            <a href="project02.html">
-                <div id="holder2" class="placeholder"></div>
-            </a>
-            <a href="project03.html">
-                <div id="holder3" class="placeholder"></div>
-            </a>
-            <a href="project04.html">
-                <div id="holder4" class="placeholder"></div>
-            </a>
+            <div id="containertje">
 
 
 
+                <div id="PEP-LINKS">
 
+
+                </div>
+            </div>
 
         </div>
 
 
+        <div id="scene1" class="scene">
+            <h2 class="kopje">PORTOFOLIO</h2>
+            <button class="home">^</button>
+
+            <div class="wrapper">
+                <a href="project01.html">
+                    <div id="holder1" class="placeholder"></div>
+                </a>
+                <a href="project02.html">
+                    <div id="holder2" class="placeholder"></div>
+                </a>
+                <a href="project03.html">
+                    <div id="holder3" class="placeholder"></div>
+                </a>
+                <a href="project04.html">
+                    <div id="holder4" class="placeholder"></div>
+                </a>
+                <a href="project04.html">
+                    <div id="holder4" class="placeholder"></div>
+                </a>
+                <a href="project04.html">
+                    <div id="holder4" class="placeholder"></div>
+                </a>
+
+
+
+
+
+            </div>
+
+
+        </div>
+
+        <div id="scene2" class="scene">
+            <h2 class="kopje">FOTOGRAFIE</h2>
+            <button class="home">^</button>
+
+        </div>
+
+        <div id="scene3" class="scene">
+            <h2 class="kopje">TESTIMONIALS</h2>
+            <button class="home">^</button>
+
+        </div>
+
     </div>
-
-    <div id="scene2" class="scene">
-        <h2 class="kopje">FOTOGRAFIE</h2>
-        <button class="home">^</button>
-
-    </div>
-
-    <div id="scene3" class="scene">
-        <h2 class="kopje">TESTIMONIALS</h2>
-        <button class="home">^</button>
-
-    </div>
-
-
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
